<resources>
    <string name="app_name">DigiPay</string>

    <string name="title_home">Home</string>
    <string name="title_qr">QR</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello,</string>
    <string name="mohit"><u>Mohit Bhargava</u></string>
    <string name="payment">Payment</string>
    <string name="cn_10_000">Cn 10,000</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="transactions">Transactions</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="send_coins">Send Coins</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="conti">Continue</string>
    <string name="or">OR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="recent_contacts">Recent Contacts</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="confirm_and_send">Confirm and Send</string>
    <string name="enter_coins">Enter Coins</string>
    <string name="scan_my_code_to_pay">Scan my code to pay</string>
    <string name="link_bank_acc">Link Bank Account</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="hello_there">Hello There</string>
    <string name="label_hide">HIDE</string>
    <string name="label_show">Show</string>
    <string name="transaction_statement">Transaction Statement</string>
    <string name="logout">Logout</string>
</resources>
