<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/back_btn"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_coins"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_view_gray"
            android:hint="@string/enter_account_number"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_baseline_account_balance_24"
            android:drawablePadding="15dp"
            android:inputType="number"
            android:id="@+id/enter_account_number"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conti"
            android:background="@drawable/rounded_button_themeblue"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/continue_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr"
            android:background="@drawable/rounded_button_themeblue"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textAlignment="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/scan_qr_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_contacts"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:id="@+id/recent_header"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recent_sends"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="2dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>