<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.digi.pay.custom.textviews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/transaction_statement"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_24sdp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/transaction_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp">

            <com.digi.pay.custom.textviews.ExtraBoldTextView
                android:id="@+id/transaction_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/transactions"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

            <com.digi.pay.custom.textviews.SemiBoldTextView
                android:id="@+id/credit_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_toStartOf="@+id/debit_header"
                android:text="@string/credit"
                android:textColor="@color/green"
                android:textSize="@dimen/_10sdp" />

            <com.digi.pay.custom.textviews.SemiBoldTextView
                android:id="@+id/debit_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/debit"
                android:textColor="@color/red"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noti_transaction_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp" />



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_bell_white"
        android:background="@color/colorPrimary"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>