<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowcurve"
            android:paddingBottom="30dp">

            <!--header ivew -->
            <RelativeLayout
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hello"
                    android:text="@string/dharmendra"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/sampleteammate_image" />


            </RelativeLayout>

            <!--Button center-->
            <RelativeLayout
                android:id="@+id/button_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_view"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_button_lightblue"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/payment"
                    android:textColor="#fff"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/cn_10_000"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />

            </RelativeLayout>

            <!--send Block -->
            <RelativeLayout
                android:id="@+id/send_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button_lightblue"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imagesend"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/people" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagesend"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/send"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <!--Receive Block -->
            <RelativeLayout
                android:id="@+id/receive_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_center"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/rounded_button_lightblue"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imagereceive"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imagereceive"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/receive"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/transaction_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/transaction_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/transactions"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credit_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:layout_toLeftOf="@+id/debit_header"
                android:text="@string/credit"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/debit_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:text="@string/debit"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transaction_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>