<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/value_view"
            android:background="@drawable/rounded_view_gray"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_value"
                android:text="@string/transactions"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_value"
                android:text="@string/transactions"
                android:textColor="#85000000"
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/transaction_value"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/credit_value"
                android:text="@string/credit"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_toLeftOf="@+id/debit_value"
                android:layout_marginRight="50dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/debit_value"
                android:text="@string/debit"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="25dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>




    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>